--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/inirey/R-API-modules.git"
   },
   "keywords": [
-    "YNTKTS"
+    "FREEAPI"
   ],
   "author": "sekha",
   "license": "ISC",
