--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sekha-api",
+  "name": "skh-api",
   "version": "1.0.0",
-  "description": "api-sekha",
+  "description": "api-skh",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
