--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skh-api",
   "version": "2.1.1",
-  "description": "api-skh",
+  "description": "turu",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
